--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,16 +1,35 @@
-<html>
-    <head>
-        <title>INDEX</title>
-    </head>
-    <body style="background-color:pink">
-        <p style="text-align:center">
-            <h1>INDEX</h1>
-            <ul>
-           <li>GHEE GUD      <link><a>https://youtu.be/i2RlpbDNw7k</a></link><hr></li>
-           <li>DANCE      <link><a>https://youtu.be/8TJErfJvRXo</a></link><hr></li>
-           <li>ANKIT MEWADA      <link><a>https://youtu.be/A8m_hMu5mrM</a></link><hr></li>
-           <li>UJJAIN      <link><a>https://youtu.be/v28FqKD7jXA</a></link><hr></li>
-            </ul>
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body style="background-color:pink">
+    <p style="text-align:center">
+    <h1>INDEX</h1>
+    <ul>
+        <li>GHEE GUD
+            <a href="https://youtu.be/i2RlpbDNw7k">vlog1</a>
+            <hr>
+        </li>
+        <li>DANCE
+            <a href="https://youtu.be/8TJErfJvRXo">vlog2</a>
+            <hr>
+        </li>
+        <li>ANKIT MEWADA
+            <a href="https://youtu.be/A8m_hMu5mrM">vlog3</a>
+            <hr>
+        </li>
+        <li>UJJAIN
+            <a href="https://youtu.be/v28FqKD7jXA">vlog4</a>
+            <hr>
+        </li>
+    </ul>
+    </p>
+</body>
+
 </html>
