--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -12,20 +12,20 @@
     <p style="text-align:center">
     <h1>INDEX</h1>
     <ul>
-        <li>GHEE GUD
-            <a href="https://youtu.be/i2RlpbDNw7k">vlog1</a>
+        <li>
+            <a href="https://youtu.be/i2RlpbDNw7k">GHEE GUD</a>
             <hr>
         </li>
-        <li>DANCE
-            <a href="https://youtu.be/8TJErfJvRXo">vlog2</a>
+        <li>
+            <a href="https://youtu.be/8TJErfJvRXo">DANCE</a>
             <hr>
         </li>
-        <li>ANKIT MEWADA
-            <a href="https://youtu.be/A8m_hMu5mrM">vlog3</a>
+        <li>
+            <a href="https://youtu.be/A8m_hMu5mrM">ANKIT MEWADA</a>
             <hr>
         </li>
-        <li>UJJAIN
-            <a href="https://youtu.be/v28FqKD7jXA">vlog4</a>
+        <li>
+            <a href="https://youtu.be/v28FqKD7jXA">UJJAIN</a>
             <hr>
         </li>
     </ul>
